--- a/en/index.html
+++ b/en/index.html
@@ -6,10 +6,24 @@
 		<link rel="stylesheet" href="/main.css" />
 		<link rel="stylesheet" href="/fonts/proximaNova/stylesheet.css" />
 		<link rel="stylesheet" href="/fonts/sfproDisplay/stylesheet.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="\icons\brands\favicon.webp"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="\icons\brands\favicon.webp" />
-    <link rel="icon" type="image/png" sizes="16x16" href="\icons\brands\favicon.webp" />
-    <link rel="manifest" href="/icons/site.webmanifest" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="\icons\brands\favicon.webp"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="\icons\brands\favicon.webp"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="\icons\brands\favicon.webp"
+		/>
+		<link rel="manifest" href="/icons/site.webmanifest" />
 		<title>HR-Nafi</title>
 	</head>
 
@@ -20,87 +34,102 @@
 			</div>
 		</div>
 
-    <div class="header-super-wrapper">
-      <header>
-        <div class="header-wrapper">
-          <div class="logo">
-            <a href="/">
-            <img src="/icons/logo.webp" alt="HR-Nafi logo" />
-            </a>
-          </div>
-          <nav class="nav-menu">
-            <ul>
-              <li><a href="#about">About us</a></li>
-              <li><a href="#what-we-do">Our services</a></li>
-              <li><a href="#team">Our team</a></li>
-              <li><a href="#reviews">Reviews</a></li>
-              <li><a href="#academy">Send a resume</a></li>
-            </ul>
-          </nav>
+		<div class="header-super-wrapper">
+			<header>
+				<div class="header-wrapper">
+					<div class="logo">
+						<a href="/en/">
+							<img src="/icons/logo.webp" alt="HR-Nafi logo" />
+						</a>
+					</div>
+					<nav class="nav-menu">
+						<ul>
+							<li><a href="#about">About us</a></li>
+							<li><a href="#what-we-do">Our services</a></li>
+							<li><a href="#team">Our team</a></li>
+							<li><a href="#reviews">Reviews</a></li>
+							<li><a href="#academy">Send a resume</a></li>
+						</ul>
+					</nav>
 
-          <div class="sidebar">
-            <div class="sidebar-wrapper">
-              <button class="close">
-                <span class="line top"></span>
-                <span class="line middle"></span>
-                <span class="line bottom"></span>
-              </button>
-              <ul class="sidebar-list">
-                <li class="sidebar-item">
-                  <a href="#about"> About us </a>
-                </li>
+					<div class="wrapper-menu">
+						<button class="open">
+							<span class="line top"></span>
+							<span class="line middle"></span>
+							<span class="line bottom"></span>
+						</button>
+						<div class="social-media">
+							<a href="https://www.instagram.com/"
+								><img src="/icons/instagram.svg" alt="instagram logo"
+							/></a>
+							<a href="https://web.telegram.org/a/"
+								><img src="/icons/telegram.svg" alt="telegram-logo"
+							/></a>
+						</div>
 
-                <li class="sidebar-item">
-                  <a href="#what-we-do"> Our services </a>
-                </li>
+						<div class="lang">
+							<div class="Rus">
+								<img src="/icons/eng.png" alt="eng-logo" />EN
 
-                <li class="sidebar-item">
-                  <a href="#team"> Our team </a>
-                </li>
+								<div class="dropdown">
+									<a href="/index.html" class="dropdown-item Rus"
+										><img src="/icons/Flags.svg" alt="rus-logo" />RU</a
+									>
+									<a href="/uz/index.html" class="dropdown-item Rus"
+										><img src="/icons/uzb.png" alt="uzb-logo" />UZ</a
+									>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</header>
 
-                <li class="sidebar-item">
-                  <a href="#reviews"> Reviews </a>
-                </li>
+			<div class="sidebar">
+				<div class="sidebar-wrapper">
+					<button class="close">
+						<span class="line top"></span>
+						<span class="line middle"></span>
+						<span class="line bottom"></span>
+					</button>
+					<ul class="sidebar-list">
+						<li class="sidebar-item">
+							<a href="#about"> About us </a>
+						</li>
 
-                <li class="sidebar-item">
-                  <a href="#academy"> Send a resume </a>
-                </li>
+						<li class="sidebar-item">
+							<a href="#what-we-do"> Our services </a>
+						</li>
 
-                <li class="sidebar-item">
-                  <div class="social-media">
-                    <a href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2" target="_blank">
-                      <img src="/icons/instagram.png" alt="instagram" />
-                    </a>
-                    <a href="https://t.me/hrnafiuz" target="_blank">
-                      <img src="/icons/telegram.svg" alt="telegram-logo"/>
-                    </a>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
+						<li class="sidebar-item">
+							<a href="#team"> Our team </a>
+						</li>
 
-          <div class="wrapper-menu">
-            <button class="open">
-              <span class="line top"></span>
-              <span class="line middle"></span>
-              <span class="line bottom"></span>
-            </button>
-            <div class="social-media">
-              <a href="https://www.instagram.com/"
-                ><img src="/icons/instagram.svg" alt="instagram logo"
-              /></a>
-              <a href="https://web.telegram.org/a/"
-                ><img src="/icons/telegram.svg" alt="telegram-logo"
-              /></a>
-            </div>
-            <div class="lang">
-              <div class="Rus"><img src="/icons/Flags.svg" alt="rus-logo" />RU</div>
-            </div>
-          </div>
-        </div>
-      </header>
-    </div>
+						<li class="sidebar-item">
+							<a href="#reviews"> Reviews </a>
+						</li>
+
+						<li class="sidebar-item">
+							<a href="#academy"> Send a resume </a>
+						</li>
+
+						<li class="sidebar-item">
+							<div class="social-media">
+								<a
+									href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2"
+									target="_blank"
+								>
+									<img src="/icons/instagram.png" alt="instagram" />
+								</a>
+								<a href="https://t.me/hrnafiuz" target="_blank">
+									<img src="/icons/telegram.svg" alt="telegram-logo" />
+								</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 
 		<main>
 			<section class="swiper">
@@ -113,7 +142,7 @@
 							</div>
 							<span class="text-image">
 								We turn management<br />
-								chaos into   
+								chaos into
 								<b
 									>efficiency and<br />
 									order.</b
@@ -141,7 +170,7 @@
 							</div>
 							<span class="text-image">
 								We implement <b>automation</b><br />
-								to create transparent and<br>
+								to create transparent and<br />
 								<b>manageable processes.</b>
 							</span>
 						</div>
@@ -153,8 +182,8 @@
 								<img src="/icons/logo.webp" alt="logo" />
 							</div>
 							<span class="text-image">
-								We boost <b>team motivation</b> and<br/>
-								competence to achieve<br>
+								We boost <b>team motivation</b> and<br />
+								competence to achieve<br />
 								collective <b>success.</b>
 							</span>
 						</div>
@@ -206,11 +235,10 @@
 						We select <b>key <br />employees</b>
 					</h1>
 					<div class="light-text">
-						
 						<h3><strong>Choosing tomorrow's leaders</strong></h3>
 						<p>
-							We identify key characteristics and leadership potential,
-							to ensure the company's long-term success and sustainability.
+							We identify key characteristics and leadership potential, to
+							ensure the company's long-term success and sustainability.
 						</p>
 
 						<h3><strong>Building the dream team</strong></h3>
@@ -224,15 +252,15 @@
 						</h3>
 						<p>
 							We seek and attract leaders with outstanding management and<br />
-							strategic abilities necessary for leading and
-							developing the key areas of our company.
+							strategic abilities necessary for leading and developing the key
+							areas of our company.
 						</p>
 
 						<div class="contact-container">
-              <a href="tel:+998 93 721 72 54">
-                <h3>Contact us</h3>
-              </a>
-            </div>
+							<a href="tel:+998 93 721 72 54">
+								<h3>Contact us</h3>
+							</a>
+						</div>
 					</div>
 				</div>
 				<div class="video-container">
@@ -254,35 +282,35 @@
 						<div class="text-wrapper">
 							<h3>Care</h3>
 							<p>
-								- бережное отношение и индивидуальный подход к каждому человеку
-								лежат в основе профессионального кода HR Nafi
+								- a gentle approach and individual attention to each person are
+								at the heart of HR Nafi's professional code.
 							</p>
 						</div>
 					</div>
 					<div id="confidence">
 						<div class="text-wrapper">
-							<h3>Доверие</h3>
+							<h3>Trust</h3>
 							<p>
-								- открытость, умение слушать и доверять партнеру позволяют
-								выстроить крепкие профессиональные отношения
+								- openness, the ability to listen, and trust in partners allow
+								us to build strong professional relationships.
 							</p>
 						</div>
 					</div>
 					<div id="result">
 						<div class="text-wrapper">
-							<h3>Результативность</h3>
+							<h3>Effectiveness</h3>
 							<p>
-								- мы достигаем целей в заданный срок с максимальной
-								эффективностью, сохраняя высокое качество
+								- we achieve goals within the specified time frame with maximum
+								efficiency while maintaining high quality.
 							</p>
 						</div>
 					</div>
 					<div id="loyalty">
 						<div class="text-wrapper">
-							<h3>Верность</h3>
+							<h3>Loyalty</h3>
 							<p>
-								- в любой ситуации мы остаёмся верны справедливы принципам
-								ведения бизнеса
+								- in any situation, we remain true to the principles of fair
+								business conduct.
 							</p>
 						</div>
 					</div>
@@ -291,11 +319,11 @@
 
 			<section class="our-service-container">
 				<div class="our-service-text">
-					<h2>Наши услуги</h2>
+					<h2>Our service</h2>
 					<p>
-						Мы занимаемся полным спектром HR - услуг<br />
-						от консалтинга и подбора персонала до<br />
-						аутсорсинга процессов.
+						We provide a full range of HR services,<br />
+						from consulting and recruitment to<br />
+						process outsourcing.
 					</p>
 				</div>
 
@@ -305,27 +333,27 @@
 							<div class="text-wrapper">
 								<h3>Executive Search</h3>
 								<p>
-									-это практика эксклюзивного поиска топ-руководителей,
-									стратегически важных сотрудников и уникальных специалистов
+									- this is the practice of exclusive search for top executives,
+									strategically important employees, and unique specialists.
 								</p>
 							</div>
 						</div>
 						<div id="it-search">
 							<div class="text-wrapper">
-								<h3>IT - подбор</h3>
+								<h3>IT - recruitment</h3>
 								<p>
-									-это услуга по поиску и подбору специалистов в области
-									информационных технологий, аналитики и разработки
+									- is service focuses on finding and selecting specialists in
+									the fields of information technology, analytics, and
+									development.
 								</p>
 							</div>
 						</div>
 						<div id="massive-search">
 							<div class="text-wrapper">
-								<h3>Массовый подбор</h3>
+								<h3>Mass recruitment</h3>
 								<p>
-									-массовый подбор персонала необходим, когда заказчику
-									требуется большое количество сотрудников с одинаковой
-									квалификацией
+									- mass recruitment is necessary when a client requires a large
+									number of employees with the same qualifications.
 								</p>
 							</div>
 						</div>
@@ -336,21 +364,21 @@
 					<div class="twice-wrapper">
 						<div id="hr-consalting">
 							<div class="text-wrapper">
-								<h3>HR - консалтинг</h3>
+								<h3>HR - consulting</h3>
 								<p>
-									-поможем компаниям в оптимизации процессов по работе с
-									персоналом.
+									- we help companies optimize their personnel management
+									processes.
 								</p>
 							</div>
 						</div>
 
 						<div id="teaching-employees">
 							<div class="text-wrapper">
-								<h3>Обучение персонала</h3>
+								<h3>Employee training</h3>
 								<p>
-									-это ключевые аспекты управления человеческими ресурсами,
-									направленные на повышение квалификации и профессионального
-									роста сотрудников внутри организации
+									- these are key aspects of human resource management aimed at
+									improving skills and fostering professional growth within the
+									organization.
 								</p>
 								<img
 									src="/images/graduation cap lying on pile of books.svg"
@@ -365,23 +393,23 @@
 					<div class="last-wrapper">
 						<div id="adaption-personal">
 							<div class="text-wrapper">
-								<h3>Адаптация персонала</h3>
+								<h3>Employee onboarding</h3>
 								<p>
-									-большое внимание уделяем онбордингу и адаптации новых
-									сотрудников
+									- we place great emphasis on onboarding and adapting new
+									employees.
 								</p>
 							</div>
 						</div>
 
 						<div id="consultation">
 							<div class="text-wrapper">
-								<h3>Запишитесь на бесплатную консультацию</h3>
+								<h3>Schedule a free consultation</h3>
 								<p>
-									Узнайте, как мы можем помочь вашей компании в подборе,
-									развитии и управлении талантами.
+									Find out how we can assist your company in recruiting,
+									developing, and managing talent.
 								</p>
 								<a href="https://t.me/eldormustafaev" class="arrow-text">
-									<p>Записаться</p>
+									<p>Sign up</p>
 									<img src="/icons/arrow-right.png" alt="arrow" />
 								</a>
 							</div>
@@ -396,11 +424,11 @@
 
 			<section class="our-team-container" id="team">
 				<div class="team-text">
-					<h3>Наша команда</h3>
+					<h3>Our team</h3>
 					<p>
-						Экспертиза консультантов HR Nafi собрала<br />
-						лучшие международные практики и подходы<br />
-						к работе с персоналом
+						The expertise of HR Nafi consultants <br />
+						incorporates the best international practices<br />
+						and approaches to personnel management.
 					</p>
 				</div>
 
@@ -408,29 +436,29 @@
 					<div class="photo-wrappers swiper-wrapper">
 						<div class="swiper-slide" id="first">
 							<img src="/images/1.png" alt="" />
-							<h4>Шахноза Асророва</h4>
+							<h4>Shakhnoza Asrorova</h4>
 							<p>SEO</p>
 						</div>
 						<div class="swiper-slide" id="second">
 							<img src="/images/2.png" alt="" />
-							<h4>Эльдор Мустафаев</h4>
-							<p>HR бизнес партнер</p>
+							<h4>Eldor Mustafayev</h4>
+							<p>HR business partner</p>
 						</div>
 						<div class="swiper-slide" id="third">
 							<img src="/images/3.png" alt="" />
-							<h4>Наташа Петровна</h4>
-							<p>HR Рекрутёр</p>
+							<h4>Natalya Lim</h4>
+							<p>HR recruiter</p>
 						</div>
-						<div class="swiper-slide" id="fifth">
+						<!-- <div class="swiper-slide" id="fifth">
 							<img src="/images/5.png" alt="" />
-							<h4>Дамир Давлятов</h4>
-							<p>IT специалист</p>
+							<h4>Damir Davlyatov</h4>
+							<p>IT specialist</p>
 						</div>
 						<div class="swiper-slide" id="sixth">
 							<img src="/images/Rectangle 44.png" alt="" />
-							<h4>Далер Мустафаев</h4>
-							<p>Дизайнер</p>
-						</div>
+							<h4>Daler Mustafaev</h4>
+							<p>Designer</p>
+						</div> -->
 					</div>
 				</div>
 				<div class="next-buttons">
@@ -445,12 +473,11 @@
 
 			<section class="reviews-container" id="reviews">
 				<div class="reviews-text">
-					<h3>Отзывы наших клиентов</h3>
+					<h3>Client’s reviews</h3>
 					<p>
-						Признаем важность каждого отзыва, мы<br />
-						демонстрируем свою ориентированность на<br />
-						клиента и стремление к постоянному<br />
-						совершенствованию.
+						We acknowledge the importance of every feedback,<br />
+						demonstrating our client-centric approach and<br />
+						commitment to continuous improvement.<br />
 					</p>
 				</div>
 
@@ -498,37 +525,40 @@
 				<div class="logo-wrapper">
 					<img src="/icons/logo.webp" alt="HR-Nafi logo" />
 					<p>
-						Любая информация на сайте защищена авторским правом. Копирование<br />
-						информации с сайта в любых целях запрещено.
+						All information on the website is protected by copyright. Copying<br />
+						information from the site for any purpose is prohibited.
 					</p>
 				</div>
 
 				<div class="wrappers-two">
 					<div class="info-wrapper">
-						<h3>Информация</h3>
-						<p><a href="#about">О нас</a></p>
-						<p><a href="#what-we-do">Наши услуги</a></p>
-						<p><a href="#team">Наша команда</a></p>
-						<p><a href="#reviews">Отзывы</a></p>
-						<p>Отправить резюме</p>
+						<h3>Info</h3>
+						<p><a href="#about">About us</a></p>
+						<p><a href="#what-we-do">Our service</a></p>
+						<p><a href="#team">Our team</a></p>
+						<p><a href="#reviews">Reviews</a></p>
+						<p>Submit a resume</p>
 					</div>
 
 					<div class="contacts-wrapper">
-						<h3>Контакты</h3>
+						<h3>Contacts</h3>
 
 						<div class="contact">
-              <a href="tel:+998937217254">
+							<a href="tel:+998937217254">
 								<p>+998 93 721 72 54</p>
 							</a>
 							<p id="special">info@hrnafi.com</p>
 						</div>
 						<p>
-							г. Самарканд, ул.<br />
-							Шахрисабз, 38/1
+							Samarkand, <br />
+							Shahrisabz st., 38/1
 						</p>
 
 						<div class="links">
-							<a href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2" target="_blank">
+							<a
+								href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2"
+								target="_blank"
+							>
 								<img src="/icons/instagram.png" alt="instagram" />
 							</a>
 							<a href="https://t.me/hrnafiuz" target="_blank">
@@ -540,8 +570,8 @@
 			</div>
 
 			<div class="conclusion">
-				<span class="madeBy"> ©2024, Разработано студией Inexbrand </span>
-				<span class="confidence"> Политика конфиденциальности </span>
+				<span class="madeBy"> ©2024, Developed by Inexbrand</span>
+				<span class="confidence"> Privacy policy </span>
 			</div>
 		</footer>
 
