--- a/uz/index.html
+++ b/uz/index.html
@@ -38,17 +38,17 @@
 			<header>
 				<div class="header-wrapper">
 					<div class="logo">
-						<a href="/">
-							<img src="icons/logo.webp" alt="HR-Nafi logo" />
+						<a href="/uz/">
+							<img src="/icons/logo.webp" alt="HR-Nafi logo" />
 						</a>
 					</div>
 					<nav class="nav-menu">
 						<ul>
-							<li><a href="#about">О нас</a></li>
-							<li><a href="#what-we-do">Наши услуги</a></li>
-							<li><a href="#team">Наша команда</a></li>
-							<li><a href="#reviews">Отзывы</a></li>
-							<li><a href="#academy">Отправить резюме</a></li>
+							<li><a href="#about">Biz haqimizda</a></li>
+							<li><a href="#what-we-do">Bizning xizmatlar</a></li>
+							<li><a href="#team">Bizning jamoa</a></li>
+							<li><a href="#reviews">Izohlar</a></li>
+							<li><a href="#academy">Rezyume yuborish</a></li>
 						</ul>
 					</nav>
 
@@ -58,30 +58,25 @@
 							<span class="line middle"></span>
 							<span class="line bottom"></span>
 						</button>
-
 						<div class="social-media">
-							<a
-								href="https://www.instagram.com/hr_nafi?igsh=NHJ1ZzBxYzU2MTN2"
-								target="_blank"
-							>
-								<img src="icons/instagram.svg" alt="instagram logo" />
-							</a>
-
-							<a href="https://t.me/hrnafiuz" target="_blank">
-								<img src="icons/telegram.svg" alt="telegram-logo" />
-							</a>
+							<a href="https://www.instagram.com/"
+								><img src="/icons/instagram.svg" alt="instagram logo"
+							/></a>
+							<a href="https://web.telegram.org/a/"
+								><img src="/icons/telegram.svg" alt="telegram-logo"
+							/></a>
 						</div>
 
 						<div class="lang">
 							<div class="Rus">
-								<img src="/icons/Flags.svg" alt="rus-logo" />RU
+								<img src="/icons/uzb.png" alt="uzb-logo" />UZ
 
 								<div class="dropdown">
-									<a href="en/index.html" class="dropdown-item Rus"
+									<a href="/en/index.html" class="dropdown-item Rus"
 										><img src="/icons/eng.png" alt="eng-logo" />EN</a
 									>
-									<a href="uz/index.html" class="dropdown-item Rus"
-										><img src="/icons/uzb.png" alt="uzb-logo" />UZ</a
+									<a href="/index.html" class="dropdown-item Rus"
+										><img src="/icons/Flags.svg" alt="rus-logo" />RU</a
 									>
 								</div>
 							</div>
@@ -99,25 +94,24 @@
 					</button>
 					<ul class="sidebar-list">
 						<li class="sidebar-item">
-							<a href="#about"> О нас </a>
+							<a href="#about">Biz haqimizda </a>
 						</li>
 
 						<li class="sidebar-item">
-							<a href="#what-we-do"> Наши услуги </a>
+							<a href="#what-we-do"> Bizning xizmatlar </a>
 						</li>
 
 						<li class="sidebar-item">
-							<a href="#team"> Наша команда </a>
+							<a href="#team"> Bizning jamoa </a>
 						</li>
 
 						<li class="sidebar-item">
-							<a href="#reviews"> Отзывы </a>
+							<a href="#reviews"> Izohlar </a>
 						</li>
 
 						<li class="sidebar-item">
-							<a href="#academy"> Отправить резюме </a>
+							<a href="#academy"> Rezyume yuborish </a>
 						</li>
-
 						<li class="sidebar-item">
 							<div class="social-media">
 								<a
@@ -127,7 +121,7 @@
 									<img src="/icons/instagram.png" alt="instagram" />
 								</a>
 								<a href="https://t.me/hrnafiuz" target="_blank">
-									<img src="/icons/telegram.png" alt="telegram" />
+									<img src="/icons/telegram.svg" alt="telegram-logo" />
 								</a>
 							</div>
 						</li>
@@ -140,65 +134,56 @@
 			<section class="swiper">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<div class="swiper-slide shadow">
-							<img src="images/buildings.webp" alt="buildings" />
-						</div>
+						<img src="/images/buildings.webp" alt="buildings" />
 						<div class="wrapper-for-img">
 							<div class="logo-image">
-								<img src="icons/logo.webp" alt="logo" />
+								<img src="/icons/logo.webp" alt="logo" />
 							</div>
 							<span class="text-image">
-								Превращаем управленческий<br />
-								хаос в
-								<b
-									>эффективность и<br />
-									порядок.</b
-								>
+								Biz boshqaruvdagi <br />
+								tartibsizliklarini samaradorlik va<br />
+								<b>barqarorlikka aylantiramiz.</b>
 							</span>
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="swiper-slide shadow">
-							<img src="images/chess.png" alt="chess" />
-						</div>
+						<img src="/images/chess.png" alt="chess" />
 						<div class="wrapper-for-img">
 							<div class="logo-image">
-								<img src="icons/logo.webp" alt="logo" />
+								<img src="/icons/logo.webp" alt="logo" />
 							</div>
 							<span class="text-image">
-								Лучших специалистов<br />
-								объединяем с ведущими<br />
-								<b>компаниями</b>
+								Biz eng yaxshi<br />
+								mutaxassislarni etakchi<br />
+								<b>kompaniyalar</b>bilan bogʻlaymiz
 							</span>
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="swiper-slide shadow">
-							<img src="images/ai.png" alt="ai" />
-						</div>
+						<img src="/images/ai.png" alt="ai" />
 						<div class="wrapper-for-img">
 							<div class="logo-image">
-								<img src="icons/logo.webp" alt="logo" />
+								<img src="/icons/logo.webp" alt="logo" />
 							</div>
+
 							<span class="text-image">
-								Внедряем <b>автоматизацию</b><br />
-								для создания прозрачных и<br />
-								<b>управляемых процессов.</b>
+								Biz shaffof va boshqariladigan <br />
+								jarayonlarning<b>avtomatlashtirilgan</b><br />
+								<b>tizimini yoʻlga qoʻyamiz</b>
 							</span>
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="swiper-slide shadow">
-							<img src="images/buttons.jpeg" alt="buttons" />
-						</div>
+						<img src="/images/buttons.jpeg" alt="buttons" />
 						<div class="wrapper-for-img">
 							<div class="logo-image">
-								<img src="icons/logo.webp" alt="logo" />
+								<img src="/icons/logo.webp" alt="logo" />
 							</div>
+
 							<span class="text-image">
-								Повышаем <b>мотивацию</b> и<br />
-								компетентность команд для<br />
-								достижение <b>общего успеха.</b>
+								Biz umumiy <b>muvaffaqiyatga erishish</b><br />
+								uchun jamoa motivasiyasi va<br />
+								malakasini <b>oshiramiz</b>
 							</span>
 						</div>
 					</div>
@@ -208,7 +193,7 @@
 			<section class="partners-container">
 				<hr />
 				<div class="partners-wrapper">
-					<div class="our-partners">Наши партнеры</div>
+					<div class="our-partners">Bizning hamkorlar</div>
 					<div class="partners-logos swiper-logos">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
@@ -246,34 +231,35 @@
 			<section class="employees-container" id="about">
 				<div class="employees">
 					<h1>
-						Мы подбираем <b>ключевых <br />сотрудников</b>
+						Biz eng <b>asosiy <br />xodimlarni </b>tanlab beramiz
 					</h1>
 					<div class="light-text">
-						<h3><strong>Выбор лидеров завтрашнего дня</strong></h3>
+						<h3><strong>Ertangi kun liderlarining tanlovi</strong></h3>
 						<p>
-							Определяем ключевые характеристики и потенциал для лидерства,
-							чтобы гарантировать долгосрочный успех и устойчивость компании.
+							Biz kompaniyaning uzoq muddatli muvaffaqiyati va barqarorligini
+							ta'minlash uchun liderlikning asosiy jihatlari va etakchilik
+							salohiyatini aniqlab beramiz.
 						</p>
 
-						<h3><strong>Формирование команды мечты</strong></h3>
+						<h3><strong>Orzudagi jamoani shakllantirish</strong></h3>
 						<p>
-							Соединяем уникальные таланты в единую команду, способную на<br />
-							реализацию инновационных проектов и достижение новых высот в
-							бизнесе.
+							Biz noyob iste'dodlarni innovasion loyihalarni amalga oshirish va
+							biznesda yangi marralarni zabt etishga qodir yagona jamoaga
+							birlashtiramiz.
 						</p>
 
 						<h3>
-							<strong>Отбор топ-менеджеров для стратегического роста</strong>
+							<strong>Strategik oʻsish uchun top-menejerlarni tanlash</strong>
 						</h3>
 						<p>
-							Ищем и привлекаем лидеров с выдающимися управленческими и<br />
-							стратегическими способностями, необходимыми для руководства и
-							развития ключевых направлений нашей компании.
+							Biz kompaniyaning asosiy yoʻnalishlarini boshqarish va
+							rivojlantirish uchun zarur boʻlgan ajoyib boshqaruv va strategik
+							qobiliyatlarga ega liderlarni qidirib topamiz va olib kelamiz.
 						</p>
 
 						<div class="contact-container">
 							<a href="tel:+998 93 721 72 54">
-								<h3>Связаться с нами</h3>
+								<h3>Biz bilan aloqa</h3>
 							</a>
 						</div>
 					</div>
@@ -281,7 +267,7 @@
 				<div class="video-container">
 					<div class="wrapper-button">
 						<div class="play-button">
-							<img src="icons/play-circle.svg" alt="play" />
+							<img src="/icons/play-circle.svg" alt="play" />
 							<p>Play</p>
 						</div>
 					</div>
@@ -290,42 +276,42 @@
 
 			<section class="values-container" id="what-we-do">
 				<div class="values-text">
-					<h2>Наши ценности</h2>
+					<h2>Bizning qadriyatlar</h2>
 				</div>
 				<div class="small-containers">
 					<div id="care">
 						<div class="text-wrapper">
-							<h3>Забота</h3>
+							<h3>Gʻamxoʻrlik</h3>
 							<p>
-								- бережное отношение и индивидуальный подход к каждому человеку
-								лежат в основе профессионального кода HR Nafi
+								- har bir insonga boʻlgan ehtiyotkorona va individual yondashuv
+								HR Nafi professional kodining asosini tashkil qiladi
 							</p>
 						</div>
 					</div>
 					<div id="confidence">
 						<div class="text-wrapper">
-							<h3>Доверие</h3>
+							<h3>Ishonch</h3>
 							<p>
-								- открытость, умение слушать и доверять партнеру позволяют
-								выстроить крепкие профессиональные отношения
+								- hamkorga nisbatan ochiqlik, tinglash qobiliyati va ishonch
+								kuchli professional munosabatlarni oʻrnatishga imkon beradi
 							</p>
 						</div>
 					</div>
 					<div id="result">
 						<div class="text-wrapper">
-							<h3>Результативность</h3>
+							<h3>Samaradorlik</h3>
 							<p>
-								- мы достигаем целей в заданный срок с максимальной
-								эффективностью, сохраняя высокое качество
+								- biz belgilangan muddatda yuqori sifatda, maksimal samaradorlik
+								bilan maqsadlarga erishamiz
 							</p>
 						</div>
 					</div>
 					<div id="loyalty">
 						<div class="text-wrapper">
-							<h3>Верность</h3>
+							<h3>Sadoqat</h3>
 							<p>
-								- в любой ситуации мы остаёмся верны справедливы принципам
-								ведения бизнеса
+								- har qanday vaziyatda biz biznes yuritish tamoyillariga sodiq
+								qolamiz
 							</p>
 						</div>
 					</div>
@@ -334,11 +320,12 @@
 
 			<section class="our-service-container">
 				<div class="our-service-text">
-					<h2>Наши услуги</h2>
+					<h2>Bizning xizmatlar</h2>
 					<p>
-						Мы занимаемся полным спектром HR - услуг<br />
-						от консалтинга и подбора персонала до<br />
-						аутсорсинга процессов.
+						Biz konsalting va ishga qabul<br />qilishdan tortib, jarayonlarning
+						autsorsingigacha <br />
+						boʻlgan HR - xizmatlarining toʻliq spektri <br />
+						bilan shugʻullanamiz.
 					</p>
 				</div>
 
@@ -348,27 +335,26 @@
 							<div class="text-wrapper">
 								<h3>Executive Search</h3>
 								<p>
-									-это практика эксклюзивного поиска топ-руководителей,
-									стратегически важных сотрудников и уникальных специалистов
+									-bu eng yaxshi rahbarlar, strategik muhim xodimlar va noyob
+									mutaxassislarni izlab topishning eksklyuziv amaliyotidir
 								</p>
 							</div>
 						</div>
 						<div id="it-search">
 							<div class="text-wrapper">
-								<h3>IT - подбор</h3>
+								<h3>IT - tanlash</h3>
 								<p>
-									-это услуга по поиску и подбору специалистов в области
-									информационных технологий, аналитики и разработки
+									-bu axborot texnologiyalari, tahlil va tadqiq sohasidagi
+									mutaxassislarni topish va tanlash xizmati
 								</p>
 							</div>
 						</div>
 						<div id="massive-search">
 							<div class="text-wrapper">
-								<h3>Массовый подбор</h3>
+								<h3>Ommaviy tanlash</h3>
 								<p>
-									-массовый подбор персонала необходим, когда заказчику
-									требуется большое количество сотрудников с одинаковой
-									квалификацией
+									-buyurtmachiga bir xil malakaga ega boʻlgan koʻp sonli
+									xodimlar talab qilinganda, ommaviy tanlash zarur boʻladi
 								</p>
 							</div>
 						</div>
@@ -379,21 +365,21 @@
 					<div class="twice-wrapper">
 						<div id="hr-consalting">
 							<div class="text-wrapper">
-								<h3>HR - консалтинг</h3>
+								<h3>HR - konsalting</h3>
 								<p>
-									-поможем компаниям в оптимизации процессов по работе с
-									персоналом.
+									-biz kompaniyalarga xodimlar bilan ishlash jarayonlarini
+									optimallashtirishda yordam beramiz
 								</p>
 							</div>
 						</div>
 
 						<div id="teaching-employees">
 							<div class="text-wrapper">
-								<h3>Обучение персонала</h3>
+								<h3>Xodimlarni oʻqitish</h3>
 								<p>
-									-это ключевые аспекты управления человеческими ресурсами,
-									направленные на повышение квалификации и профессионального
-									роста сотрудников внутри организации
+									-bular tashkilot ichidagi xodimlarning malakasini oshirish va
+									kasbiy oʻsishiga qaratilgan inson resurslarini boshqarishning
+									asosiy jihatlari
 								</p>
 								<img
 									src="/images/graduation cap lying on pile of books.svg"
@@ -408,23 +394,24 @@
 					<div class="last-wrapper">
 						<div id="adaption-personal">
 							<div class="text-wrapper">
-								<h3>Адаптация персонала</h3>
+								<h3>Xodimlar adaptasiyasi</h3>
 								<p>
-									-большое внимание уделяем онбордингу и адаптации новых
-									сотрудников
+									-onbording va yangi xodimlar adaptasiyasiga jiddiy e'tibor
+									qaratamiz
 								</p>
 							</div>
 						</div>
 
 						<div id="consultation">
 							<div class="text-wrapper">
-								<h3>Запишитесь на бесплатную консультацию</h3>
+								<h3>Bepul maslahat uchun roʻyxatdan oʻting</h3>
 								<p>
-									Узнайте, как мы можем помочь вашей компании в подборе,
-									развитии и управлении талантами.
+									Sizning kompaniyangizga iste'dodlarni tanlash, rivojlantirish
+									va boshqarish ishida qanday yordam berishimiz mumkinligini
+									bilib oling.
 								</p>
 								<a href="https://t.me/eldormustafaev" class="arrow-text">
-									<p>Записаться</p>
+									<p>Roʻyxatdan oʻtish</p>
 									<img src="/icons/arrow-right.png" alt="arrow" />
 								</a>
 							</div>
@@ -439,11 +426,11 @@
 
 			<section class="our-team-container" id="team">
 				<div class="team-text">
-					<h3>Наша команда</h3>
+					<h3>Bizning jamoa</h3>
 					<p>
-						Экспертиза консультантов HR Nafi собрала<br />
-						лучшие международные практики и подходы<br />
-						к работе с персоналом
+						HR Nafi konsultantlar ekspertizasi eng yaxshi<br />
+						xalqaro amaliyot va inson resurslari<br />
+						yondashuvlarini oʻzida jamladi
 					</p>
 				</div>
 
@@ -451,25 +438,25 @@
 					<div class="photo-wrappers swiper-wrapper">
 						<div class="swiper-slide" id="first">
 							<img src="/images/1.png" alt="" />
-							<h4>Шахноза Асророва</h4>
+							<h4>Shaxnoza Asrorova</h4>
 							<p>SEO</p>
 						</div>
 						<div class="swiper-slide" id="second">
 							<img src="/images/2.png" alt="" />
-							<h4>Эльдор Мустафаев</h4>
-							<p>HR бизнес партнер</p>
+							<h4>Eldor Mustafaev</h4>
+							<p>HR biznes hamkor</p>
 						</div>
 						<div class="swiper-slide" id="third">
 							<img src="/images/3.png" alt="" />
-							<h4>Наталья Лим</h4>
-							<p>HR Рекрутёр</p>
+							<h4>Natalya Lim</h4>
+							<p>HR Rekrutyor</p>
 						</div>
 						<!-- <div class="swiper-slide" id="fifth">
 							<img src="/images/5.png" alt="" />
 							<h4>Дамир Давлятов</h4>
 							<p>IT специалист</p>
-						</div>
-						<div class="swiper-slide" id="sixth">
+						</div> -->
+						<!-- <div class="swiper-slide" id="sixth">
 							<img src="/images/Rectangle 44.png" alt="" />
 							<h4>Далер Мустафаев</h4>
 							<p>Дизайнер</p>
@@ -488,12 +475,12 @@
 
 			<section class="reviews-container" id="reviews">
 				<div class="reviews-text">
-					<h3>Отзывы наших клиентов</h3>
+					<h3>Mijozlarimiz izohlari</h3>
 					<p>
-						Признаем важность каждого отзыва, мы<br />
-						демонстрируем свою ориентированность на<br />
-						клиента и стремление к постоянному<br />
-						совершенствованию.
+						Biz har bir izoh (fikr-mulohaza)ning<br />
+						muhimligini tan olib, mijozlarga yoʻnaltirilganligimizni<br />
+						va doimiy takomilga intilishimizni<br />
+						namoyon etamiz.
 					</p>
 				</div>
 
@@ -539,25 +526,26 @@
 		<footer>
 			<div class="footer-wrapper">
 				<div class="logo-wrapper">
-					<img src="icons/logo.webp" alt="HR-Nafi logo" />
+					<img src="/icons/logo.webp" alt="HR-Nafi logo" />
 					<p>
-						Любая информация на сайте защищена авторским правом. Копирование<br />
-						информации с сайта в любых целях запрещено.
+						Saytdagi har qanday ma'lumot mualliflik huquqi bilan
+						himoyalangan.<br />
+						Saytdan har qanday maqsadda ma'lumotdan nusxa olish ta'qiqlanadi.
 					</p>
 				</div>
 
 				<div class="wrappers-two">
 					<div class="info-wrapper">
-						<h3>Информация</h3>
-						<p><a href="#about">О нас</a></p>
-						<p><a href="#what-we-do">Наши услуги</a></p>
-						<p><a href="#team">Наша команда</a></p>
-						<p><a href="#reviews">Отзывы</a></p>
-						<p>Отправить резюме</p>
+						<h3>Ma'lumot</h3>
+						<p><a href="#about">Biz haqimizdа</a></p>
+						<p><a href="#what-we-do">Bizning xizmatlar</a></p>
+						<p><a href="#team">Bizning jamoa</a></p>
+						<p><a href="#reviews">Izohlar</a></p>
+						<p>Rezyume yuborish</p>
 					</div>
 
 					<div class="contacts-wrapper">
-						<h3>Контакты</h3>
+						<h3>Biz bilan aloqa</h3>
 
 						<div class="contact">
 							<a href="tel:+998937217254">
@@ -566,8 +554,8 @@
 							<p id="special">info@hrnafi.com</p>
 						</div>
 						<p>
-							г. Самарканд, ул.<br />
-							Шахрисабз, 38/1
+							Samarqand sh.,<br />
+							Shahrisabz koʻch., 38/1
 						</p>
 
 						<div class="links">
@@ -586,8 +574,10 @@
 			</div>
 
 			<div class="conclusion">
-				<span class="madeBy"> ©2024, Разработано студией Inexbrand </span>
-				<span class="confidence"> Политика конфиденциальности </span>
+				<span class="madeBy">
+					©2024, Inexbrand studiyasi tomonidan ishlab chiqilgan
+				</span>
+				<span class="confidence"> Maxfiylik siyosati </span>
 			</div>
 		</footer>
 
